force-app/main/default/objects/Property_Type__c/Property_Type__c.object-meta.xml
<CustomObject>
    <label>Property Type</label>
    <nameField>
        <displayFormat>PR-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>