force-app/main/default/objects/Property_Type__c/fields/Account_Master__c.field-meta.xml
<CustomField>
    <fullName>Account_Master__c</fullName>
    <label>Account Master</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.Id</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Property Types</relationshipLabel>
    <relationshipName>Property_Types</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>