force-app/main/default/objects/Property_Type__c/fields/Final_Price__c.field-meta.xml
<CustomField>
    <fullName>Final_Price__c</fullName>
    <formula>Property_Final_Price__c - (Property_Final_Price__c  *  Discount__c /100 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>