force-app/main/default/objects/Property_Type__c/fields/Property_Currency__c.field-meta.xml
<CustomField>
    <fullName>Property_Currency__c</fullName>
    <label>Property Currency</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>