force-app/main/default/objects/Property_Type__c/fields/Property_Final_Price__c.field-meta.xml
<CustomField>
    <fullName>Property_Final_Price__c</fullName>
    <formula>IF(ISPICKVAL(Property_Type__c , &apos;2Bhk&apos;) ,  Property_Currency__c  * 2, IF(ISPICKVAL(Property_Type__c , &apos;3BHK&apos;),Property_Currency__c  * 3,IF(ISPICKVAL(Property_Type__c , &apos;4BHK&apos;),Property_Currency__c  * 4,Property_Currency__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Final Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>