force-app/main/default/objects/Property_Type__c/listViews/Sachin_View.listView-meta.xml
<ListView>
    <fullName>Sachin_View</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Account_Master__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Rich_Text__c</columns>
    <filterScope>Mine</filterScope>
    <label>Sachin View</label>
</ListView>